endpoint to create player
